clang/test/Sema/attr-aligned.c
// RUN: clang -fsyntax-only -verify %s

int x __attribute__((aligned(3))); // expected-error {{requested alignment is not a power of 2}}
